Cleaned up dev-mode page

--- a/style.css
+++ b/style.css
@@ -97,6 +97,10 @@ button#calculate {
 	color: var(--background);
 }
 
+button.dangerous {
+	background-color: var(--error);
+}
+
 #form {
 	margin-bottom: 2rem;
 }
