--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ button.dangerous {
 
 .achievement-icon {
 	aspect-ratio: 1;
-	width: 7rem;
+	height: 7rem;
 	margin-right: 1rem;
 }
 
@@ -134,6 +134,17 @@ button.dangerous {
 
 .achievement-description {
 	margin-bottom: 1rem;
+}
+
+.achievement-completed {
+	aspect-ratio: 1;
+	padding: 0;
+	width: 5rem;
+	margin-bottom: 0;
+}
+
+.achievement-completed > i {
+	font-size: 5rem;
 }
 
 .achievement > div {
