Created input fields for build_specs

--- a/style.css
+++ b/style.css
@@ -101,6 +101,21 @@ select, input, button {
 	transition: 50ms ease-in-out;
 }
 
+#add-drive-button {
+	width: 2rem;
+	height: 2rem;
+	padding: 0;
+	justify-self: right;
+}
+
+#add-drive-button:hover {
+	width: 6rem;
+}
+
+#add-drive-button:hover::before {
+	content: "Add Drive "
+}
+
 button:hover {
 	transform: scale(103%);
 }
